# platform.upstream.xrestop

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  project.config  xrestop-0.4.tar.gz.delta  xrestop-0.4.tar.gz.id  xrestop.c  xrestop.spec.in
doc/: Makefile.am  Makefile.in  xrestop.1
packaging/: xrestop.changes  xrestop.spec
